--- a/FineCollectionService/pom.xml
+++ b/FineCollectionService/pom.xml
@@ -31,6 +31,10 @@
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.dapr</groupId>
+            <artifactId>dapr-sdk</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
