--- a/FineCollectionService/pom.xml
+++ b/FineCollectionService/pom.xml
@@ -35,6 +35,10 @@
             <groupId>io.dapr</groupId>
             <artifactId>dapr-sdk</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.dapr</groupId>
+            <artifactId>dapr-sdk-springboot</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
