--- a/TrafficControlService/pom.xml
+++ b/TrafficControlService/pom.xml
@@ -32,6 +32,10 @@
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.dapr</groupId>
+            <artifactId>dapr-sdk</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
