--- a/VehicleRegistrationService/pom.xml
+++ b/VehicleRegistrationService/pom.xml
@@ -17,6 +17,14 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.ajbrown</groupId>
             <artifactId>name-machine</artifactId>
             <version>1.0.0</version>
