Configure Spring Boot application names

--- a/VehicleRegistrationService/src/main/resources/application.yml
+++ b/VehicleRegistrationService/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: VehicleRegistrationService
   jackson:
     serialization:
       write-dates-as-timestamps: false
