Configure Sleuth context propagation with W3C

--- a/TrafficControlService/src/main/resources/application.yml
+++ b/TrafficControlService/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
       write-dates-as-timestamps: false
   main:
     banner-mode: off
+  sleuth:
+    propagation:
+      type: w3c
 
 server:
   port: 6000
